fix spacing

--- a/src/client/styles/components/ItemsContainer.scss
+++ b/src/client/styles/components/ItemsContainer.scss
@@ -107,7 +107,7 @@ button.item-table-filters {
     font-size: 1rem;
     font-weight: 600;
     margin-bottom: 0;
-    margin-top: 0;
+    margin-top: var(--nypl-space-s);
     padding-right: 10px;
   }
 
